kubernetes/apps/kyverno/kyverno/policies/ghcrPullSecret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ghcr-pull-secret
  annotations:
    policies.kyverno.io/title: Add GHCR pull secret
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  background: false
  rules:
  - name: add-ghcr-pull-secret
    match:
      any:
      - resources:
          kinds:
          - Pod
          operations:
          - CREATE
    exclude:
      any:
      - resources:
          namespaces:
          - cilium-secrets
          - kube-node-lease
          - kube-public
          - kube-system
    mutate:
      patchStrategicMerge:
        spec:
          imagePullSecrets:
          - name: ghcr-pull-secret
