kubernetes/apps/kyverno/kyverno/policies/volsync-movers.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: volsync-movers
  annotations:
    policies.kyverno.io/title: Mutate Volsync mover jobs
    policies.kyverno.io/subject: Pod
spec:
  rules:
  - name: mutate-volsync-src-movers
    match:
      any:
      - resources:
          kinds: ["batch/v1/Job"]
          names: ["volsync-src-*"]
          namespaces: ["*"]
          selector:
            matchLabels:
              app.kubernetes.io/created-by: volsync
    mutate:
      patchStrategicMerge:
        spec:
          podReplacementPolicy: Failed
          podFailurePolicy:
            rules:
            - action: FailJob
              onExitCodes:
                containerName: restic
                operator: In
                values: [11]
          template:
            spec:
              initContainers:
              - name: jitter
                image: docker.io/library/busybox:latest@sha256:fd7dc98638c8e305f4dc34e979f1c0fdfdcaeb0fbf8fcff77ae834b6da3d7e6e
                imagePullPolicy: IfNotPresent
                command: ['sh', '-c', 'sleep $(shuf -i 0-60 -n 1)']
              containers:
              - name: restic
                volumeMounts:
                - name: repository
                  mountPath: /repository
              volumes:
              - name: repository
                nfs:
                  server: "${IPAM_IP_NFS}"
                  path: /mnt/user/Backups/k8s
  - name: mutate-volsync-dst-movers
    match:
      any:
      - resources:
          kinds: ["batch/v1/Job"]
          names: ["volsync-dst-*"]
          namespaces: ["*"]
          selector:
            matchLabels:
              app.kubernetes.io/created-by: volsync
    mutate:
      patchStrategicMerge:
        spec:
          template:
            spec:
              containers:
              - name: restic
                volumeMounts:
                - name: repository
                  mountPath: /repository
              volumes:
              - name: repository
                nfs:
                  server: "${IPAM_IP_NFS}"
                  path: /mnt/user/Backups/k8s
